{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 59,
  "lineage": "ba17e762-8246-6d72-face-d92032f1f2a7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988905386241:internet-gateway/igw-06bcedb74addd9b8f",
            "id": "igw-06bcedb74addd9b8f",
            "owner_id": "988905386241",
            "region": "us-east-1",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-igw"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-vpc-igw"
            },
            "vpc_id": "vpc-0cdb06d241231fbe0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988905386241:route-table/rtb-0008aaa6b4646ed7b",
            "id": "rtb-0008aaa6b4646ed7b",
            "owner_id": "988905386241",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-private_rt"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-vpc-private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cdb06d241231fbe0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988905386241",
            "id": "rtb-0008aaa6b4646ed7b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988905386241:route-table/rtb-0a7a13d1aeadfbce6",
            "id": "rtb-0a7a13d1aeadfbce6",
            "owner_id": "988905386241",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06bcedb74addd9b8f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-public_rt"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-vpc-public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cdb06d241231fbe0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988905386241",
            "id": "rtb-0a7a13d1aeadfbce6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnets_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8fe02e95f483619",
            "region": "us-east-1",
            "route_table_id": "rtb-0008aaa6b4646ed7b",
            "subnet_id": "subnet-097a8038daf27ed64"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b91c76978558010",
            "region": "us-east-1",
            "route_table_id": "rtb-0008aaa6b4646ed7b",
            "subnet_id": "subnet-0ec995d1d70297e48"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0315dd89e1bd72a3e",
            "region": "us-east-1",
            "route_table_id": "rtb-0008aaa6b4646ed7b",
            "subnet_id": "subnet-09d02393207ef0b87"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnets_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e73c2cab5fb599b1",
            "region": "us-east-1",
            "route_table_id": "rtb-0a7a13d1aeadfbce6",
            "subnet_id": "subnet-0c148c8eeb78457bf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b7756a14f5f8072",
            "region": "us-east-1",
            "route_table_id": "rtb-0a7a13d1aeadfbce6",
            "subnet_id": "subnet-0e6c6dd3d0d6a09e9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0512e096db30db877",
            "region": "us-east-1",
            "route_table_id": "rtb-0a7a13d1aeadfbce6",
            "subnet_id": "subnet-02325829eccfd850b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988905386241:subnet/subnet-097a8038daf27ed64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097a8038daf27ed64",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "988905386241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-private-subnet-1"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-vpc-private-subnet-1"
            },
            "vpc_id": "vpc-0cdb06d241231fbe0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988905386241",
            "id": "subnet-097a8038daf27ed64",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988905386241:subnet/subnet-0ec995d1d70297e48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec995d1d70297e48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "988905386241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-private-subnet-2"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-vpc-private-subnet-2"
            },
            "vpc_id": "vpc-0cdb06d241231fbe0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988905386241",
            "id": "subnet-0ec995d1d70297e48",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988905386241:subnet/subnet-09d02393207ef0b87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d02393207ef0b87",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "988905386241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-private-subnet-3"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-vpc-private-subnet-3"
            },
            "vpc_id": "vpc-0cdb06d241231fbe0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988905386241",
            "id": "subnet-09d02393207ef0b87",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988905386241:subnet/subnet-0c148c8eeb78457bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c148c8eeb78457bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "988905386241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-prublic-subnet-1"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-vpc-prublic-subnet-1"
            },
            "vpc_id": "vpc-0cdb06d241231fbe0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988905386241",
            "id": "subnet-0c148c8eeb78457bf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988905386241:subnet/subnet-0e6c6dd3d0d6a09e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6c6dd3d0d6a09e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "988905386241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-prublic-subnet-2"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-vpc-prublic-subnet-2"
            },
            "vpc_id": "vpc-0cdb06d241231fbe0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988905386241",
            "id": "subnet-0e6c6dd3d0d6a09e9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988905386241:subnet/subnet-02325829eccfd850b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02325829eccfd850b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "988905386241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-prublic-subnet-3"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-vpc-prublic-subnet-3"
            },
            "vpc_id": "vpc-0cdb06d241231fbe0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988905386241",
            "id": "subnet-02325829eccfd850b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988905386241:vpc/vpc-0cdb06d241231fbe0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-08c3ffbe904a3ea42",
            "default_route_table_id": "rtb-06f1b733cb3a04ac2",
            "default_security_group_id": "sg-0c1ac0e9c20092293",
            "dhcp_options_id": "dopt-0e771ef947749a02f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cdb06d241231fbe0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06f1b733cb3a04ac2",
            "owner_id": "988905386241",
            "region": "us-east-1",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "test-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988905386241",
            "id": "vpc-0cdb06d241231fbe0",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}